JDK21 Update, main start guards