@@ -1,9 +1,8 @@
 plugins {
+    id 'com.gradleup.shadow' version '8.3.6'
     id 'java'
     id 'application'
     id 'org.openjfx.javafxplugin' version '0.1.0'
-    id 'org.beryx.jlink' version '3.1.1'
-    id 'com.gradleup.shadow' version '8.3.5'
 }
 
 // Versioning
@@ -11,10 +10,10 @@ def versionNumber = '0.0'
 def versionType = 'DEV' // RELEASE | BETA | ALPHA | DEV
 def versionMarker = versionType.charAt(0)
 
-
 group = 'it.italiandudes'
 version = versionNumber+versionMarker
 
+// Repository List
 repositories {
     mavenCentral()
     flatDir {
@@ -22,12 +21,33 @@ repositories {
     }
 }
 
-application {
-    mainClassName('it.italiandudes.jamazing_centralina.JAMazingCentralina')
-    mainModule.set('it.italiandudes.jamazing_centralina')
+// JavaFX Configuration
+javafx {
+    version = "21.0.7"
+    modules = [
+            'javafx.base',
+            'javafx.controls',
+            'javafx.graphics',
+            'javafx.fxml',
+            'javafx.swing',
+            'javafx.media'
+    ]
 }
 
+// Dependencies
+dependencies {
+    compileOnly 'org.jetbrains:annotations:26.0.1'
+    implementation 'org.apache.commons:commons-lang3:3.17.0'
+    implementation 'commons-io:commons-io:2.18.0'
+    implementation 'commons-codec:commons-codec:1.17.1'
+    implementation 'it.italiandudes:idl:1.2.2'
+    implementation 'org.json:json:20240303'
+    implementation 'org.controlsfx:controlsfx:11.2.2'
+}
+
+// Main Build Configuration
 shadowJar {
+    mainClassName = 'it.italiandudes.jamazing_centralina.JAMazingCentralina'
     manifest {
         attributes "Main-Class" : mainClassName
         attributes "Title" : "JAMazing Centralina"
@@ -38,74 +58,77 @@ shadowJar {
         attributes "Version-Marker" : versionMarker
         attributes "Timestamp" : new Date().format("dd/MM/yyyy HH:mm:ss.sss")
     }
-    archiveFileName = getRootDir().getName()+"-"+archiveVersion.get()+".jar"
+    archiveFileName = getRootDir().getName() + "-" + archiveVersion.get() + ".jar"
 }
 
-javafx {
-    modules = ['javafx.controls', 'javafx.fxml', 'javafx.base', 'javafx.graphics', 'javafx.swing']
-    version = '21.0.1'
-}
-
-dependencies {
-    compileOnly 'org.jetbrains:annotations:26.0.1'
-    implementation 'commons-io:commons-io:2.18.0'
-    implementation 'commons-codec:commons-codec:1.17.1'
-    implementation 'it.italiandudes:idl:1.0.9'
-    implementation 'org.json:json:20240303'
-    implementation 'org.controlsfx:controlsfx:11.2.2'
-    //JavaFX dependencies for shadowJAR
-    implementation 'org.openjfx:javafx-controls:21.0.1'
-    implementation 'org.openjfx:javafx-fxml:21.0.1'
-    implementation 'org.openjfx:javafx-base:21.0.1'
-    implementation 'org.openjfx:javafx-graphics:21.0.1'
-    implementation 'org.openjfx:javafx-swing:21.0.1'
-}
-
-test {
-    useJUnitPlatform()
-}
-
-jlink {
-    launcher {
-        name = project.name
-    }
-}
-
-run {
-    jvmArgs = [
-            '--add-exports=javafx.graphics/com.sun.javafx.application=JAMazingCentralina.main',
-            '--add-opens=javafx.graphics/com.sun.javafx.application=JAMazingCentralina.main'
-    ]
-}
-
+// Dev Tasks
 tasks.register('buildJar') {
     dependsOn shadowJar
-    run {
-        jvmArgs = [
-                '--add-exports=javafx.graphics/com.sun.javafx.application=JAMazingCentralina.main',
-                '--add-opens=javafx.graphics/com.sun.javafx.application=JAMazingCentralina.main'
-        ]
-    }
     group = "Build"
-    description = "Build and assemble the project"
+    description = "Build and assemble and run the project for the current platform"
 }
 
 tasks.register('runClient', Exec) {
-    dependsOn shadowJar
-    run {
-        jvmArgs = [
-                '--add-exports=javafx.graphics/com.sun.javafx.application=JAMazingCentralina.main',
-                '--add-opens=javafx.graphics/com.sun.javafx.application=JAMazingCentralina.main'
-        ]
-    }
+    dependsOn buildJar
     group = "Execution"
-    description = "Build, assemble and run the project"
+    description = "Build, assemble and run the project for the current platform"
     standardInput = System.in
     commandLine "java", "-jar", jar.archiveFile.get()
 }
 
-tasks.withType(JavaCompile).configureEach {
-    options.compilerArgs += [
-            '--add-exports=javafx.graphics/com.sun.javafx.application=JAMazingCentralina.main',
-    ]
+// Deployment Tasks
+tasks.register('deployJarForLinux') {
+    def platform = 'linux'
+    javafx.platform = platform
+    shadowJar {
+        manifest {
+            attributes "Target-Platform": platform
+        }
+        archiveFileName = getRootDir().getName() + "-" + archiveVersion.get() + "-" + platform.toUpperCase() + ".jar"
+    }
+    dependsOn shadowJar
+    group = "Build"
+    description = "Deploy for " + platform
+}
+
+tasks.register('deployJarForWindows') {
+    def platform = 'windows'
+    javafx.platform = platform
+    shadowJar {
+        manifest {
+            attributes "Target-Platform": platform
+        }
+        archiveFileName = getRootDir().getName() + "-" + archiveVersion.get() + "-" + platform.toUpperCase() + ".jar"
+    }
+    dependsOn shadowJar
+    group = "Build"
+    description = "Deploy for " + platform
+}
+
+tasks.register('deployJarForMac') {
+    def platform = 'mac'
+    javafx.platform = platform
+    shadowJar {
+        manifest {
+            attributes "Target-Platform": platform
+        }
+        archiveFileName = getRootDir().getName() + "-" + archiveVersion.get() + "-" + platform.toUpperCase() + ".jar"
+    }
+    dependsOn shadowJar
+    group = "Build"
+    description = "Deploy for " + platform
+}
+
+tasks.register('deployJarForMacAArch64') {
+    def platform = 'mac-aarch64'
+    javafx.platform = platform
+    shadowJar {
+        manifest {
+            attributes "Target-Platform": platform
+        }
+        archiveFileName = getRootDir().getName() + "-" + archiveVersion.get() + "-" + platform.toUpperCase() + ".jar"
+    }
+    dependsOn shadowJar
+    group = "Build"
+    description = "Deploy for " + platform
 }
